--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "11.10.6",
+    "@emotion/styled": "11.10.6",
+    "@mui/icons-material": "5.11.11",
+    "@mui/material": "5.11.11",
+    "@mui/styles": "5.11.11",
     "@next/font": "13.1.6",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
@@ -20,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "recoil": "0.7.6",
+    "recoil-persist": "4.2.0",
     "typescript": "4.9.5"
   }
 }
