--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-config-next": "13.1.6",
     "firebase": "9.17.2",
     "next": "13.1.6",
+    "notistack": "3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "recoil": "0.7.6",
