--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "13.1.6",
     "notistack": "3.0.1",
     "react": "18.2.0",
+    "react-confirm-alert": "3.0.6",
     "react-dom": "18.2.0",
     "recoil": "0.7.6",
     "recoil-persist": "4.2.0",
