--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "18.2.0",
     "react-confirm-alert": "3.0.6",
     "react-dom": "18.2.0",
+    "react-material-ui-carousel": "3.4.2",
     "recoil": "0.7.6",
     "recoil-persist": "4.2.0",
     "typescript": "4.9.5"
