--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "export": "next export",
+		"deploy": "firebase deploy",
     "start": "next start",
     "lint": "next lint"
   },
@@ -24,6 +26,7 @@
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "firebase": "9.17.2",
+    "firebase-tools": "11.25.2",
     "next": "13.1.6",
     "notistack": "3.0.1",
     "react": "18.2.0",
