--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build && next export",
-		"deploy": "firebase deploy",
+    "deploy": "firebase deploy",
     "start": "next start",
     "lint": "next lint"
   },
@@ -35,5 +35,6 @@
     "recoil": "0.7.6",
     "recoil-persist": "4.2.0",
     "typescript": "4.9.5"
-  }
+  },
+  "devDependencies": {}
 }
