--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-confirm-alert": "3.0.6",
     "react-dom": "18.2.0",
     "react-material-ui-carousel": "3.4.2",
+    "react-slick": "0.29.0",
     "recoil": "0.7.6",
     "recoil-persist": "4.2.0",
     "typescript": "4.9.5"
