--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@mui/lab": "5.0.0-alpha.122",
     "@mui/material": "5.11.11",
     "@mui/styles": "5.11.11",
+    "@mui/x-date-pickers": "6.2.0",
     "@next/font": "13.1.6",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "axios": "1.3.4",
+    "dayjs": "1.11.7",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "firebase": "9.17.2",
